# OGL

./: .clang-format  .cmake-format.py  .codedocs  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  Doxyfile  README.md  _typos.toml  runBenchmark.py  runBenchmark.sh  validation.json
.github/: bot-base.sh  bot-pr-base.sh  bot-pr-format-base.sh  format.sh
.github/workflows/: build-esi.yml  build-extend.yml  build-foam.yml  build-foam2.yml  build-foundation.yml  build.yml  check_changelog.yaml  cmake.yml  compile_on_aws.yml  format-check.yml  integration-tests.yml  pr-formatting.yml  static_checks.yaml  test_matrix.json  typo_check.yml  unit-test.yml
.reuse/: dep5
BaseWrapper/CoupledLduBase/: GKOCoupledLduBase.C  GKOCoupledLduBase.H
BaseWrapper/LduBase/: GKOLduBase.H
BaseWrapper/lduBase/: GKOlduBase.C  GKOlduBase.H
BiCGStab/: GKOBiCGStab.C  GKOBiCGStab.H
CG/: GKOCG.C  GKOCG.H
CommunicationPattern/: CommunicationPattern.C  CommunicationPattern.H
DevicePersistent/Array/: Array.C  Array.H
DevicePersistent/Base/: Base.C  Base.H
DevicePersistent/CsrMatrixWrapper/: CsrMatrixWrapper.C  CsrMatrixWrapper.H
DevicePersistent/DeviceIdGuard/: DeviceIdGuard.C  DeviceIdGuard.H
DevicePersistent/DevicePersistentArray/: DevicePersistentArray.C  DevicePersistentArray.H
DevicePersistent/DevicePersistentBase/: DevicePersistentBase.C  DevicePersistentBase.H
DevicePersistent/DevicePersistentPartition/: DevicePersistentPartition.C  DevicePersistentPartition.H
DevicePersistent/DevicePersistentVector/: DevicePersistentVector.C  DevicePersistentVector.H
DevicePersistent/DistributedMatrixAdapter/: DistributedMatrixAdapter.C  DistributedMatrixAdapter.H
DevicePersistent/ExecutorHandler/: ExecutorHandler.C  ExecutorHandler.H
DevicePersistent/HostMatrixAdapter/: HostMatrixAdapter.C  HostMatrixAdapter.H
DevicePersistent/IOExecutorHandler/: IOExecutorHandler.C  IOExecutorHandler.H
DevicePersistent/IOGKOMatrixHandler/: IOGKOMatrixHandler.C  IOGKOMatrixHandler.H
DevicePersistent/IOGlobalIndex/: gkoGlobalIndex.C  gkoGlobalIndex.H  globalIndex.C  globalIndex.H
DevicePersistent/IOPreconditioner/: IOPreconditioner.C  IOPreconditioner.H
DevicePersistent/IOSortingIdxHandler/: IOSortingIdxHandler.C  IOSortingIdxHandler.H
DevicePersistent/LDUMatrixAdapter/: LDUMatrixAdapter.H
DevicePersistent/Partition/: Partition.C  Partition.H
DevicePersistent/PersistentDeviceIdGuard/: DeviceIdGuard.C  DeviceIdGuard.H
DevicePersistent/Vector/: Vector.C  Vector.H
GKOBase/: GKOBase.C  GKOBase.H
GKOBiCGStab/: GKOBiCGStab.C  GKOBiCGStab.H
GKOCG/: GKOCG.C  GKOCG.H
HostMatrix/: HostMatrix.C  HostMatrix.H  HostMatrixFreeFunctions.C
IOExecutorHandler/: IOExecutorHandler.C
IOHandler/IOExecutorHandler/: IOExecutorHandler.C  IOExecutorHandler.H
IOHandler/IOGKOMatrixHandler/: IOGKOMatrixHandler.C  IOGKOMatrixHandler.H
IOHandler/IOGlobalIndex/: gkoGlobalIndex.C  gkoGlobalIndex.H  globalIndex.C  globalIndex.H
IOHandler/IOPreconditioner/: IOPreconditioner.C  IOPreconditioner.H
IOHandler/IOPtr/: IOPtr.C  IOPtr.H
IOHandler/IOSortingIdxHandler/: IOSortingIdxHandler.C  IOSortingIdxHandler.H
IR/: GKOIR.C  GKOIR.H
LduMatrix/GKOACG/: GKOACG.C  GKOACG.H
Make/: files  options
Multigrid/: GKOMultigrid.C  GKOMultigrid.H
Preconditioner/: Preconditioner.C  Preconditioner.H
Repartitioner/: Repartitioner.H
Solver/CG/: GKOCG.C  (+1 more)
StoppingCriterion/: StoppingCriterion.C  StoppingCriterion.H
cmake/: AutoEnableDevice.cmake  CTestCustom.cmake.in  CTestScript.cmake  DownloadCMakeLists.txt.in  NoInstallDownloadCMakeLists.txt.in  OpenFOAM.cmake  Sanitizer.cmake  build_helpers.cmake  build_type_helpers.cmake  create_test.cmake  ginkgo.cmake  install_helpers.cmake  package_helpers.cmake  version.cmake
common/: .common.H.swo  StoppingCriterion.H  common.C  common.H
include/: CMakeLists.txt  cmake_install.cmake
include/OGL/: CommunicationPattern.H  GKOlduBase.H  OGL.H  Preconditioner.H  Repartitioner.H  StoppingCriterion.H  common.H  lduLduBase.H
include/OGL/DevicePersistent/: Base.H  DeviceIdGuard.H  DistributedMatrixAdapter.H  ExecutorHandler.H  Partition.H  Vector.H
include/OGL/MatrixWrapper/: Combination.H  Distributed.H  HostMatrix.H  SparsityPattern.H
lduLduBase/: lduLduBase.C  lduLduBase.H
scripts/: travis_check_results.py  travis_install_external_ginkgo.sh
src/: CommunicationPattern.C  Preconditioner.C  Repartitioner.C  StoppingCriterion.C  common.C
test/: cavity.yaml  cavity_validation.json  channel.yaml  channel_validation.json  data_validation.py  integration.yaml  postProcessLogs.py  validation.json  variations.yaml
unitTests/: CMakeLists.txt  Combination.C  CommunicationPattern.C  HostMatrix.C  Repartitioner.C  Repartitioner.H  Repartitioner2D.C  Repartitioner2D.C   test_HostMatrix.C  test_hello_world.cpp
unitTests/MatrixWrapper/: CMakeLists.txt  Combination.C  Distributed.C  HostMatrix.C
unitTests/MatrixWrapper/data/: A.mtx  A_sparse.mtx  D.mtx  L.mtx  U.mtx  b.mtx
unitTests/case/0/: U  p
unitTests/case/constant/: transportProperties
unitTests/case/constant/polyMesh/: boundary  faces  neighbour  owner  points
unitTests/case/processor0/0/: U  p
unitTests/case/processor0/constant/polyMesh/: boundary  cellProcAddressing  faceProcAddressing  faces  owner  pointProcAddressing  points
unitTests/case/processor1/0/: U  p
unitTests/case/processor1/constant/polyMesh/: boundary  cellProcAddressing  faceProcAddressing  faces  owner  pointProcAddressing  points
unitTests/case/processor2/0/: U  p
unitTests/case/processor2/constant/polyMesh/: boundary  boundaryProcAddressing  cellProcAddressing  faceProcAddressing  faces  owner  pointProcAddressing  points
unitTests/case/processor3/0/: U  p
unitTests/case/processor3/constant/polyMesh/: boundary  cellProcAddressing  faceProcAddressing  faces  neighbour  owner  pointProcAddressing  points
unitTests/case/system/: PDRblockMeshDict  blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution
(+65 files in other folders)
